[gd_scene load_steps=8 format=3 uid="uid://3k746bv5w2nj"]

[ext_resource type="Theme" uid="uid://cxt5tdmihu36j" path="res://gui.tres" id="1_r7rlr"]
[ext_resource type="Script" path="res://Noise.gd" id="1_vk4vd"]
[ext_resource type="Script" path="res://Fractal.gd" id="3_007xf"]
[ext_resource type="Script" path="res://Cellular.gd" id="4_fawc1"]
[ext_resource type="Script" path="res://Domain.gd" id="5_gma6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1xh0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vx8ye"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.286275, 0.388235, 0.356863, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Gui" type="MarginContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 2
theme = ExtResource("1_r7rlr")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Menu" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y1xh0")

[node name="Noise" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vx8ye")
script = ExtResource("1_vk4vd")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Noise"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Noise/VBoxContainer"]
layout_mode = 2
text = "Noise"
horizontal_alignment = 1

[node name="Layers" type="HBoxContainer" parent="VBoxContainer/Noise/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Noise/VBoxContainer/Layers"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 6.0

[node name="Label" type="Label" parent="VBoxContainer/Noise/VBoxContainer/Layers"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = " "

[node name="MapSize" type="HBoxContainer" parent="VBoxContainer/Noise/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Noise/VBoxContainer/MapSize"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 512.0

[node name="Label" type="Label" parent="VBoxContainer/Noise/VBoxContainer/MapSize"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "seed: "

[node name="NoiseType" type="OptionButton" parent="VBoxContainer/Noise/VBoxContainer"]
layout_mode = 2

[node name="Seed" type="HBoxContainer" parent="VBoxContainer/Noise/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Noise/VBoxContainer/Seed"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 2000.0

[node name="Label" type="Label" parent="VBoxContainer/Noise/VBoxContainer/Seed"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "seed: "

[node name="Frequency" type="HBoxContainer" parent="VBoxContainer/Noise/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Noise/VBoxContainer/Frequency"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 0.1
step = 0.001
value = 0.01

[node name="Label" type="Label" parent="VBoxContainer/Noise/VBoxContainer/Frequency"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[node name="Fractal" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vx8ye")
script = ExtResource("3_007xf")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Fractal"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Fractal/VBoxContainer"]
layout_mode = 2
text = "Fractal"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Fractal/VBoxContainer"]
layout_mode = 2

[node name="Octaves" type="HBoxContainer" parent="VBoxContainer/Fractal/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Fractal/VBoxContainer/Octaves"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 10.0
rounded = true

[node name="Label" type="Label" parent="VBoxContainer/Fractal/VBoxContainer/Octaves"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Lacunarity" type="HBoxContainer" parent="VBoxContainer/Fractal/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Fractal/VBoxContainer/Lacunarity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 10.0
step = 0.01

[node name="Label" type="Label" parent="VBoxContainer/Fractal/VBoxContainer/Lacunarity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Gain" type="HBoxContainer" parent="VBoxContainer/Fractal/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Fractal/VBoxContainer/Gain"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 10.0
step = 0.01

[node name="Label" type="Label" parent="VBoxContainer/Fractal/VBoxContainer/Gain"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Weight" type="HBoxContainer" parent="VBoxContainer/Fractal/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Fractal/VBoxContainer/Weight"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 1.0
step = 0.01
value = 0.01

[node name="Label" type="Label" parent="VBoxContainer/Fractal/VBoxContainer/Weight"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Pingpong" type="HBoxContainer" parent="VBoxContainer/Fractal/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Fractal/VBoxContainer/Pingpong"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 10.0
step = 0.01

[node name="Label" type="Label" parent="VBoxContainer/Fractal/VBoxContainer/Pingpong"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Cellular" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vx8ye")
script = ExtResource("4_fawc1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Cellular"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Cellular/VBoxContainer"]
layout_mode = 2
text = "Cellular"
horizontal_alignment = 1

[node name="ReturnType" type="OptionButton" parent="VBoxContainer/Cellular/VBoxContainer"]
layout_mode = 2

[node name="DistanceFunction" type="OptionButton" parent="VBoxContainer/Cellular/VBoxContainer"]
layout_mode = 2

[node name="Jitter" type="HBoxContainer" parent="VBoxContainer/Cellular/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/Cellular/VBoxContainer/Jitter"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 2.0
step = 0.001
value = 0.01

[node name="Label" type="Label" parent="VBoxContainer/Cellular/VBoxContainer/Jitter"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[node name="DomainWarp" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vx8ye")
script = ExtResource("5_gma6b")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DomainWarp"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2
text = "Domain Warp"
horizontal_alignment = 1

[node name="Enabled" type="CheckBox" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2
text = "domain warp enabled"

[node name="Type" type="OptionButton" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2

[node name="Amplitude" type="HBoxContainer" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/DomainWarp/VBoxContainer/Amplitude"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
step = 0.1

[node name="Label" type="Label" parent="VBoxContainer/DomainWarp/VBoxContainer/Amplitude"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[node name="Frequency" type="HBoxContainer" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/DomainWarp/VBoxContainer/Frequency"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 1.0
step = 0.001
value = 0.01

[node name="Label" type="Label" parent="VBoxContainer/DomainWarp/VBoxContainer/Frequency"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[node name="FractalType" type="OptionButton" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2

[node name="FractalOctaves" type="HBoxContainer" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/DomainWarp/VBoxContainer/FractalOctaves"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 10.0

[node name="Label" type="Label" parent="VBoxContainer/DomainWarp/VBoxContainer/FractalOctaves"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[node name="FractalGain" type="HBoxContainer" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/DomainWarp/VBoxContainer/FractalGain"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 10.0
step = 0.01
value = 0.01

[node name="Label" type="Label" parent="VBoxContainer/DomainWarp/VBoxContainer/FractalGain"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[node name="FractalLacunarity" type="HBoxContainer" parent="VBoxContainer/DomainWarp/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSlider" type="HSlider" parent="VBoxContainer/DomainWarp/VBoxContainer/FractalLacunarity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 10.0
step = 0.01
value = 0.01

[node name="Label" type="Label" parent="VBoxContainer/DomainWarp/VBoxContainer/FractalLacunarity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "freq: "

[connection signal="value_changed" from="VBoxContainer/Noise/VBoxContainer/Layers/HSlider" to="VBoxContainer/Noise" method="_on_layers_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Noise/VBoxContainer/MapSize/HSlider" to="VBoxContainer/Noise" method="_on_mapSize_value_changed"]
[connection signal="item_selected" from="VBoxContainer/Noise/VBoxContainer/NoiseType" to="VBoxContainer/Noise" method="_on_noiseType_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Noise/VBoxContainer/Seed/HSlider" to="VBoxContainer/Noise" method="_on_seed_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Noise/VBoxContainer/Frequency/HSlider" to="VBoxContainer/Noise" method="_on_frequency_value_changed"]
[connection signal="item_selected" from="VBoxContainer/Fractal/VBoxContainer/OptionButton" to="VBoxContainer/Fractal" method="_on_fractalType_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Fractal/VBoxContainer/Octaves/HSlider" to="VBoxContainer/Fractal" method="_on_octave_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Fractal/VBoxContainer/Lacunarity/HSlider" to="VBoxContainer/Fractal" method="_on_lacunarity_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Fractal/VBoxContainer/Gain/HSlider" to="VBoxContainer/Fractal" method="_on_gain_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Fractal/VBoxContainer/Weight/HSlider" to="VBoxContainer/Fractal" method="_on_weight_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Fractal/VBoxContainer/Pingpong/HSlider" to="VBoxContainer/Fractal" method="_on_pingpong_value_changed"]
[connection signal="item_selected" from="VBoxContainer/Cellular/VBoxContainer/ReturnType" to="VBoxContainer/Cellular" method="_on_returnType_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Cellular/VBoxContainer/DistanceFunction" to="VBoxContainer/Cellular" method="_on_distanceFunction_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Cellular/VBoxContainer/Jitter/HSlider" to="VBoxContainer/Cellular" method="_on_jitter_value_changed"]
[connection signal="toggled" from="VBoxContainer/DomainWarp/VBoxContainer/Enabled" to="VBoxContainer/DomainWarp" method="_on_enabled_toggled"]
[connection signal="item_selected" from="VBoxContainer/DomainWarp/VBoxContainer/Type" to="VBoxContainer/DomainWarp" method="_on_domainType_item_selected"]
[connection signal="value_changed" from="VBoxContainer/DomainWarp/VBoxContainer/Amplitude/HSlider" to="VBoxContainer/DomainWarp" method="_on_amplitude_value_changed"]
[connection signal="value_changed" from="VBoxContainer/DomainWarp/VBoxContainer/Frequency/HSlider" to="VBoxContainer/DomainWarp" method="_on_frequency_value_changed"]
[connection signal="item_selected" from="VBoxContainer/DomainWarp/VBoxContainer/FractalType" to="VBoxContainer/DomainWarp" method="_on_fractalType_item_selected"]
[connection signal="value_changed" from="VBoxContainer/DomainWarp/VBoxContainer/FractalOctaves/HSlider" to="VBoxContainer/DomainWarp" method="_on_fractalOctaves_value_changed"]
[connection signal="value_changed" from="VBoxContainer/DomainWarp/VBoxContainer/FractalGain/HSlider" to="VBoxContainer/DomainWarp" method="_on_fractalGain_value_changed"]
[connection signal="value_changed" from="VBoxContainer/DomainWarp/VBoxContainer/FractalLacunarity/HSlider" to="VBoxContainer/DomainWarp" method="_on_fractalLacunarity_value_changed"]
